@@ -3140,55 +3140,6 @@ proc check_effective_target_lto { } {
     return [info exists ENABLE_LTO]
 }
 
-# Return 1 if the MPC library is integrated with GCC, 0 otherwise.
-
-proc check_effective_target_mpc { } {
-    return [check_no_compiler_messages mpc executable {
-	extern void link_error(void);
-	int main ()
-	{
-	  if (__builtin_csin(0) != 0)
-	    link_error();
-	}
-    }]
-}
-
-# Return 1 if the MPC library with mpc_pow is integrated with GCC, 0 otherwise.
-
-proc check_effective_target_mpc_pow { } {
-    return [check_no_compiler_messages mpc_pow executable {
-	extern void link_error(void);
-	int main ()
-	{
-	  if (__builtin_cpow(1,1) != 1)
-	    link_error();
-	}
-    }]
-}
-
-# Return 1 if the MPC library with "arc" functions is integrated with GCC, 0 otherwise.
-
-proc check_effective_target_mpc_arc { } {
-    return [check_no_compiler_messages mpc_arc executable {
-	extern void link_error(void);
-	int main ()
-	{
-	  if (__builtin_cacos(1) != 0)
-	    link_error();
-	  if (__builtin_casin(0) != 0)
-	    link_error();
-	  if (__builtin_catan(0) != 0)
-	    link_error();
-	  if (__builtin_cacosh(1) != 0)
-	    link_error();
-	  if (__builtin_casinh(0) != 0)
-	    link_error();
-	  if (__builtin_catanh(0) != 0)
-	    link_error();
-	}
-    }]
-}
-
 # Return 1 if the language for the compiler under test is C.
 
 proc check_effective_target_c { } {
